--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "pg": "^8.16.3",
